Add player photo url
